...
          </View>
        </View>
      </Screen>
      <View style={[themed($footer), $footerSafeArea]}>
        <View style={themed($footerContent)}>
          <Button
            testID="start-game-button"
            tx="localGame:startGame"
            preset="reversed"
            disabled={!valid}
            accessibilityHint="Starts this local game on the current device"
            onPress={() => valid && onStart(players, startingLife)}
          />
...
