...
        <Text
          text={
            isReturningUser
              ? includesPrivacy && !includesTerms
                ? "We have updated our privacy policy"
                : "We have updated our terms"
              : "Before you start"
          }
          preset="heading"
          accessibilityRole="header"
        />
        <Text
          text={
...
          />
        ) : null}
        {error ? (
          <Text accessibilityRole="alert" text={error} size="xs" style={themed($error)} />
        ) : null}
        <Button
          testID="accept-legal-button"
          text={isSubmitting ? "Saving…" : "I agree"}
          preset="reversed"
          style={themed($primaryAction)}
          disabled={isSubmitting}
          onPress={() => {
            if (!isReturningUser && sharing !== analyticsEnabled()) {
...
