appId: ${MAESTRO_APP_ID}
---
- runFlow: ../shared/_OnFlowStart.yaml
- assertVisible:
    id: "player-grid"
- tapOn:
    id: "game-menu-button"
- tapOn:
    id: "setup-button"
- assertVisible: "New game"
- runFlow:
    when:
      true: ${PLAYER_COUNT > 2}
    commands:
      - repeat:
          times: ${PLAYER_COUNT - 2}
          commands:
            - tapOn:
                id: "player-count-increment"
- scrollUntilVisible:
    element:
      id: "start-game-button"
    direction: DOWN
- tapOn:
    id: "start-game-button"
- assertVisible:
    id: "player-grid"
- waitForAnimationToEnd
- tapOn:
    id: "life-seat-1-1"
- tapOn:
    id: "life-seat-2--1"
- waitForAnimationToEnd
- takeScreenshot: ${SCREENSHOT_NAME}
